# model3d-rs

./: .gitattributes  Cargo.toml  LICENSE  build.rs  m3d.c  m3d.h  m3d_wrapper.h
examples/: common.rs
examples/cube/: cube.wgsl  main.rs
examples/model/: main.rs  model.wgsl
src/: action.rs  bindings.rs  bone.rs  inlined_texture.rs  lib.rs  material.rs  object.rs  texture.rs
src/m3d/: action.rs  inlined_texture.rs  mod.rs  object.rs  texture.rs
