[package]
name = "model3d"
description = "Rust wrapper of the Model3D C SDK."
version = "0.0.1"
edition = "2021"
authors = ["Tarik Benouissaaden <TarikBenouissaaden@protonmail.com>"]
license = "MIT"
homepage = "https://gitlab.com/bztsrc/model3d/-/tree/master"
repository = "https://github.com/UsiTarek/model3d-rs"
publish = true

[dependencies]
num_enum = "0.5"
bitflags = "1.3"
libc = "0.2"

[build-dependencies]
bindgen = "0.60"
cc = "1.0"

[dev-dependencies]
winit = "0.27"
wgpu = "0.13"
pollster = "0.2"
nalgebra-glm = "0.17"
bytemuck = { version = "1.12", features = ["derive"] }

[[example]]
name = "cube"